# booster_robotics_sdk_ros2

./: CMakeLists.txt
booster_ros2_example/rpc_client/: CMakeLists.txt
booster_ros2_example/rpc_client/src/: simple_head_test.py
booster_ros2_example/rtc_client/include/: prompt.h
booster_ros2_example/rtc_client/src/: client.cpp
booster_ros2_interface/: CMakeLists.txt
booster_ros2_interface/msg/: RobotStatusMsg.msg
include/booster_interface/: message_utils.hpp
include/robot/ai/: client.hpp
msg/: FallDownState.msg  Odometer.msg
rpc_client/src/: client.cpp
src/robot/ai/: client.cpp
